--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <head>
-            <h1>Sem Título</h1>
+            <h1>Cursos Grátis</h1>
         </head>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Parágrafo com o texto 001</p>
+            <h2>Curso muito bom</h2>
+            <p>Recomendo muito</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Parágrafo com o texto 002</p>
+            <h2>Curso mais ou menos</h2>
+            <p>Se tiver tempo faça</p>
         </article>
     </main>
 </body>
